# sequoia-nn

./: README.md  pyproject.toml  pyproject_backup.toml
sequoia-nn/: __init__.py  client_app.py  server_app.py  task.py
