[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sequoia-nn"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.1",
    "flwr-datasets[vision]>=0.3.0",
    "scikit-learn>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "helenklim"

[tool.flwr.app.config]
num-server-rounds = 2
penalty = "l2"
local-epochs = 10
batch-size = 32

[tool.flwr.federations.local-deployment]
address = "0.0.0.0:9093"
insecure = true

[tool.flwr.federations]
default = "local-deployment"

[tool.flwr.app.components]
serverapp = "sequoia-nn.server_app:app"
clientapp = "sequoia-nn.client_app:app"